--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,22 @@
     <artifactId>thinking-in-java</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <!--将远程仓库配置配置为私服-->
+    <repositories>
+        <repository>
+            <id>aliyun</id>
+            <name>aliyun</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+        </repository>
+    </repositories>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/xom/xom -->
+        <dependency>
+            <groupId>xom</groupId>
+            <artifactId>xom</artifactId>
+            <version>1.2.5</version>
+        </dependency>
+    </dependencies>
 
 </project>
