--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
             <artifactId>xom</artifactId>
             <version>1.2.5</version>
         </dependency>
-    </dependencies>
 
+        <dependency>
+            <groupId>net.mindview</groupId>
+            <artifactId>net</artifactId>
+            <scope>system</scope>
+            <version>1.0.0</version>
+            <systemPath>${basedir}/src/main/resources/jar/net-1.0.0.jar</systemPath>
+        </dependency>
+    </dependencies>
 </project>
