--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,13 @@
             <version>1.0.0</version>
             <systemPath>${basedir}/src/main/resources/jar/net-1.0.0.jar</systemPath>
         </dependency>
+
+        <dependency>
+            <groupId>com.sun</groupId>
+            <artifactId>mirror</artifactId>
+            <scope>system</scope>
+            <version>1.0.0</version>
+            <systemPath>${basedir}/src/main/resources/jar/apt-mirror-api-0.1.jar</systemPath>
+        </dependency>
     </dependencies>
 </project>
